<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.example.crawler</groupId>
  <artifactId>mycrawler</artifactId>
  <packaging>jar</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>mycrawler</name>
  <url>http://maven.apache.org</url>
  

  <dependencies>
    <!-- Latest Crawler4j Dependency -->
    <dependency>
        <groupId>edu.uci.ics</groupId>
        <artifactId>crawler4j</artifactId>
        <version>4.4.0</version>
    </dependency>
    
    <!-- Correct Berkeley DB JE Version -->
    <dependency>
        <groupId>com.sleepycat</groupId>
        <artifactId>je</artifactId>
        <version>7.5.11</version>
    </dependency>

  </dependencies>

  <repositories>
    <repository>
        <id>oracleReleases</id>
        <url>https://download.oracle.com/maven</url>
    </repository>
  </repositories>

  <build>
    <plugins>
      <!-- Maven compiler plugin to specify Java version -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>11</source>
          <target>21</target>
        </configuration>
      </plugin>

      <!-- Maven exec plugin to allow execution of the main class -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.0.0</version>
        <configuration>
          <mainClass>com.example.crawler.Controller</mainClass>
          <arguments>
            <argument>--add-exports=java.management/sun.management=ALL-UNNAMED</argument>
            <argument>--add-opens=java.management/sun.management=ALL-UNNAMED</argument>
          </arguments>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
